# fastmcp-oauth-proxy-with-aws-sample

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  security_best_practices_report.md
.github/workflows/: ci.yml
client/: client_metadata.example.json  test_client.py
docs/: patterns.md  setup.md
infrastructure/: app.py  cdk.json  cognito_stack.py
scripts/: check_prereqs.sh  check_server.sh  create_test_user.sh  deploy_cognito.sh  destroy_cognito.sh  env.sh  prepare_cimd_gist.sh  prepare_traditional_client.sh  render_cimd_metadata.py  run.sh
src/: cognito_variants.py  config.py  server_cimd.py  server_dcr.py  server_traditional.py  tools.py
tests/: conftest.py  test_cimd_metadata.py  test_variants.py
