[project]
name = "fastmcp-cognito-cimd-dcr-sample"
version = "0.1.0"
description = "FastMCP × AWS Cognito sample demonstrating CIMD / DCR / traditional OAuth client patterns"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
    "mcp>=1.9.0",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "aiohttp>=3.10",
    "cryptography>=43",
    "python-dotenv>=1.0",
]

[dependency-groups]
infra = [
    "aws-cdk-lib>=2.160",
    "constructs>=10.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
